building faker and externing template info

--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -47,7 +47,7 @@
         </div>
 
         <footer class="recipe-footer">
-            <a href="" class="recipe-read-more button button-dark button-full-width">
+            <a href="" class="recipe-read-more button button-dark button-full-width" href="">
                 <i class="fas fa-eye"></i>
                 <span>see more...</span>
             </a>
