--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -1,30 +1,35 @@
 
     <div class="recipe recipe-list-item">
         <div class="recipe-cover">
-            <img src="https://placehold.co/1280x720/269fe6/000000" alt="Temporário">
+            <a href="{% url 'recipes:recipe' recipe.id %}">
+                <img src="{{recipe.cover.url}}" alt="{{ recipe.title }}">
+            </a>
         </div>
         <div class="recipe-title-container">
             <h2 class="recipe-title">
-                {% filter capfirst %}{% lorem 5 w random %}{% endfilter %}
+                <a href="{% url 'recipes:recipe' recipe.id %}">
+                    {{ recipe.title }}
+                </a>
             </h2>
         </div>
         <div class="recipe-author">
             <span class="recipe-author-item">
-                <i class="fas fa-user"></i> Patrick Ferreira
+                <i class="fas fa-user"></i>
+                {{ recipe.author.first_name }} {{ recipe.author.last_name }}
             </span>
             <span class="recipe-author-item">
-                <i class="fas fa-calendar-alt"></i> 14/08/2025 às 11:59
+                <i class="fas fa-calendar-alt"></i> {{ recipe.created_at|date:"d/m/Y H:i" }}
             </span>
             <span class="recipe-author-item">
                 <a href="/recipes/category/cafe-da-manha/">
                     <i class="fas fa-layer-group"></i>
-                    <span>Breakfast</span>
+                    <span>{{ recipe.category.name }}</span>
                 </a>
             </span>
         </div>
 
         <div class="recipe-content">
-            <p>{% lorem 1 p random %}</p>
+            <p>{{ recipe.description }}</p>
         </div>
 
         <div class="recipe-meta-container">
@@ -33,7 +38,7 @@
                     <i class="fas fa-stopwatch"></i> Preparation
                 </h3>
                 <div class="recipe-meta-text">
-                    0 Minutes
+                    {{ recipe.preparation_time }} {{ recipe.preparation_time_unit }}
                 </div>
             </div>
             <div class="recipe-meta recipe-servings">
@@ -41,15 +46,23 @@
                     <i class="fas fa-pizza-slice"></i> Servings
                 </h3>
                 <div class="recipe-meta-text">
-                    0 Servings
+                    {{ recipe.servings }} {{ recipe.servings_unit }}
                 </div>
             </div>
         </div>
 
-        <footer class="recipe-footer">
-            <a href="" class="recipe-read-more button button-dark button-full-width" href="">
-                <i class="fas fa-eye"></i>
-                <span>see more...</span>
-            </a>
-        </footer>
+        {% if is_detail_page is not True %}
+            <footer class="recipe-footer">
+                <a href="{% url 'recipes:recipe' recipe.id %}" class="recipe-read-more button button-dark button-full-width" >
+                    <i class="fas fa-eye"></i>
+                    <span>see more...</span>
+                </a>
+            </footer>
+        {% endif %}
+
+        {% if is_detail_page is True %}
+            <div class="preparation-steps">
+                {{ recipe.preparation_steps|linebreaksbr }}
+            </div>
+        {% endif %}
     </div>
