--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -1,10 +1,12 @@
 
     <div class="recipe recipe-list-item">
-        <div class="recipe-cover">
-            <a href="{% url 'recipes:recipe' recipe.id %}">
-                <img src="{{recipe.cover.url}}" alt="{{ recipe.title }}">
-            </a>
-        </div>
+        {% if recipe.cover %}
+            <div class="recipe-cover">
+                <a href="{% url 'recipes:recipe' recipe.id %}">
+                    <img src="{{recipe.cover.url}}" alt="{{ recipe.title }}">
+                </a>
+            </div>
+        {% endif %}
         <div class="recipe-title-container">
             <h2 class="recipe-title">
                 <a href="{% url 'recipes:recipe' recipe.id %}">
@@ -15,17 +17,31 @@
         <div class="recipe-author">
             <span class="recipe-author-item">
                 <i class="fas fa-user"></i>
-                {{ recipe.author.first_name }} {{ recipe.author.last_name }}
+                        
+                    {% if recipe.author is not None %}
+                        {% if recipe.author.first_name %}
+                            {{ recipe.author.first_name }} {{ recipe.author.last_name }}
+                        {% else %}
+                            {{recipe.author.username}}
+                        {% endif %}
+                    {% else %}
+                        John Doe
+                    {% endif %}
             </span>
+            
+
             <span class="recipe-author-item">
                 <i class="fas fa-calendar-alt"></i> {{ recipe.created_at|date:"d/m/Y H:i" }}
             </span>
-            <span class="recipe-author-item">
-                <a href="/recipes/category/cafe-da-manha/">
-                    <i class="fas fa-layer-group"></i>
-                    <span>{{ recipe.category.name }}</span>
-                </a>
-            </span>
+
+            {% if recipe.category is not None %}
+                <span class="recipe-author-item">
+                    <a href="{% url 'recipes:category' recipe.category.id %}">
+                        <i class="fas fa-layer-group"></i>
+                        <span>{{ recipe.category.name }}</span>
+                    </a>
+                </span>
+            {% endif %}
         </div>
 
         <div class="recipe-content">
