--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -78,7 +78,11 @@
 
         {% if is_detail_page is True %}
             <div class="preparation-steps">
-                {{ recipe.preparation_steps|linebreaksbr }}
+                {% if recipe.preparation_step_is_html is True %}
+                    {{ recipe.preparation_step|safe }}
+                {% else %}
+                    {{ recipe.preparation_step|linebreaksbr }}
+                {% endif %}
             </div>
         {% endif %}
     </div>
