--- a/recipes/static/recipes/css/styles.css
+++ b/recipes/static/recipes/css/styles.css
@@ -302,3 +302,24 @@ h6 {
 .m-y {
     margin: var(--spacing-gutter-medium) 0;
 }
+
+.pagination-content {
+    display: flex;
+    flex-flow: row wrap;
+    gap: 1rem .5rem;
+}
+
+.pagination .page-item {
+    background: var(--color-gray-5);
+    padding: .5rem 1rem;
+}
+
+.pagination .page-link {
+    text-decoration: none;
+    background: var(--color-primary);
+    color: var(--color-white);
+}
+
+.pagination .page-current {
+    background: var(--color-primary-dark);
+}
