--- a/authors/templates/authors/pages/register_view.html
+++ b/authors/templates/authors/pages/register_view.html
@@ -15,18 +15,21 @@
                     <div class="form-group">
                         <label for="{{ field.id_for_label }}">{{ field.label }}</label>
                         {{ field }}
+                        
+                        {% if field.help_text %}
+                            <p class="help-text">{{ field.help_text }}</p>
+                        {% endif %}
+
+                        {{ field.errors }}
                     </div>
 
-                    {% if field.help_text %}
-                        <p class="help-text">{{ field.help_text }}</p>
-                    {% endif %}
-
-                    {{ field.errors }}
                 {% endfor %}
             </div>
-
-            <div class="form-group">
-                <button type="submit">Send</button>
+            
+            <div class="form-content form-content-grid">
+                <div class="form-group">
+                    <button type="submit">Send</button>
+                </div>
             </div>
         </form>
     </div>
