--- a/authors/templates/authors/pages/register_view.html
+++ b/authors/templates/authors/pages/register_view.html
@@ -25,6 +25,15 @@
 
                 {% endfor %}
             </div>
+            {% if form.errors %}
+                <div class="form-content form-content-grid">
+                    <div class="form-group">
+                        <div action="" class="message message-error">
+                            There are errors in the form. Please, check the form fields.
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
             
             <div class="form-content form-content-grid">
                 <div class="form-group">
