functional test for search field

--- a/base_templates/global/partials/search.html
+++ b/base_templates/global/partials/search.html
@@ -1,7 +1,7 @@
 <div class="search-container">
     <div class="container">
         <form action="{% url 'recipes:search' %}" class="search-form" >
-            <input type="search" name="q" id="q" value="{{ search_term }}" class="search-input" required>
+            <input type="search" name="q" id="q" value="{{ search_term }}" class="search-input" placeholder="Search for a recipe..." required>
             <button type="submit" class="search-button">
                 <i class="fa-solid fa-magnifying-glass"></i>
             </button>
