redirect to new dashboard page after login

--- a/base_static/global/css/styles.css
+++ b/base_static/global/css/styles.css
@@ -423,6 +423,11 @@ h6 {
     color: var(--color-debug-dark);
 }
 
+/* Authors */
+.login-message {
+    margin: 1rem 0;
+}
+
 @media (max-width: 600px) {
     .main-content-list, 
     .form-content-grid {
