--- a/authors/templates/authors/pages/login_view.html
+++ b/authors/templates/authors/pages/login_view.html
@@ -10,5 +10,7 @@
 
     {% include "global/partials/messages.html" %}
     
-    {% include "global/partials/form.html" %}
+    {% if not user.is_authenticated %}
+        {% include "global/partials/form.html" %}
+    {% endif %}
 {% endblock content %}
