--- a/base_static/global/css/styles.css
+++ b/base_static/global/css/styles.css
@@ -70,6 +70,15 @@ h6 {
     font-family: var(--font-headings);
 }
 
+img {
+    max-width: 100%;
+}
+
+a {
+    color: var(--color-primary);
+    text-decoration: none;
+}
+
 .container {
     max-width: 144rem;
     margin: 0 auto;
@@ -369,6 +378,7 @@ h6 {
     border: none;
     background: var(--color-primary-dark);
     color: var(--color-white);
+    cursor: pointer;
 }
 
 .inline-form {
