--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -17,12 +17,23 @@
         <div class="recipe-author">
             <span class="recipe-author-item">
                 <i class="fas fa-user"></i>
-                        
                     {% if recipe.author is not None %}
                         {% if recipe.author.first_name %}
-                            {{ recipe.author.first_name }} {{ recipe.author.last_name }}
+                            {% if recipe.author.profile %}
+                                <a href="{% url 'authors:profile' recipe.author.profile.id %}">
+                                    {{ recipe.author.first_name }} {{ recipe.author.last_name }}
+                                </a>
+                            {% else %}
+                                {{ recipe.author.first_name }} {{ recipe.author.last_name }}
+                            {% endif %}
                         {% else %}
-                            {{recipe.author.username}}
+                            {% if recipe.author.profile %}
+                                <a href="{% url 'authors:profile' recipe.author.profile.id %}">
+                                    {{recipe.author.username}}
+                                </a>
+                            {% else %}
+                                {{recipe.author.username}}
+                            {% endif %}
                         {% endif %}
                     {% else %}
                         John Doe
