--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -1,3 +1,4 @@
+    {% load i18n %}
 
     <div class="recipe recipe-list-item">
         {% if recipe.cover %}
@@ -62,7 +63,7 @@
         <div class="recipe-meta-container">
             <div class="recipe-meta recipe-preparation">
                 <h3 class="recipe-meta-title">
-                    <i class="fas fa-stopwatch"></i> Preparation
+                    <i class="fas fa-stopwatch"></i> {% translate 'Preparation' %}
                 </h3>
                 <div class="recipe-meta-text">
                     {{ recipe.preparation_time }} {{ recipe.preparation_time_unit }}
@@ -70,7 +71,7 @@
             </div>
             <div class="recipe-meta recipe-servings">
                 <h3 class="recipe-meta-title">
-                    <i class="fas fa-pizza-slice"></i> Servings
+                    <i class="fas fa-pizza-slice"></i> {% translate 'Servings' %}
                 </h3>
                 <div class="recipe-meta-text">
                     {{ recipe.servings }} {{ recipe.servings_unit }}
@@ -82,7 +83,7 @@
             <footer class="recipe-footer">
                 <a href="{% url 'recipes:recipe' recipe.id %}" class="recipe-read-more button button-dark button-full-width" >
                     <i class="fas fa-eye"></i>
-                    <span>see more...</span>
+                    <span>{% translate 'see more' %}...</span>
                 </a>
             </footer>
         {% endif %}
